--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Factory</title>
-    <script src="https://kit.fontawesome.com/9bf413ac4b.js" crossorigin="anonymous"></script>
+    <script src="https:/kit.fontawesome.com/9bf413ac4b.js" crossorigin="anonymous"></script>
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&family=Koulen&display=swap" rel="stylesheet">
