--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <div class="home">
         <header class="navbar">
             <div class="left">
-                <a href="home.html">Fitness Club</a>
+                <a href="index.html">Fitness Club</a>
             </div>
             <div class="hamburger">
                 <a href=""><i class="fa-solid fa-bars"></i></a>
             </div>
             <div class="mid">
                 <ul>
-                    <li><a href="home.html" class="active underline-hover">Home</a></li>
+                    <li><a href="index.html" class="active underline-hover">Home</a></li>
                     <li><a href="#About" class="underline-hover">About</a></li>
                     <li><a href="#Images" class="underline-hover">Gallery</a></li>
                     <li><a href="#address" class="underline-hover">Contact</a></li>
